# custom

./: CMakeLists.txt  Kconfig  mylib.c
include/: libcustom.h
src/: CMakeLists.txt  custom.c
zephyr/: CMakeLists.txt  Kconfig
